--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,9 @@ div {
   text-align: center;
   font-size: 1.4rem;
 }
+.head-para-mobile {
+  display: none;
+}
 
 .card-container {
   position: absolute;
@@ -597,7 +600,55 @@ div {
 }
 
 @media screen and (max-width: 700px) {
-  h1 {
-    position: relative;
+  .head-para {
+    display: none;
+  }
+
+  .head-para-mobile {
+    display: block;
+    top: calc(100% / 2 - 20px);
+    text-shadow: 2px 2px 10px rgb(0 136 255);
+    width: 100vw;
+    text-align: center;
+    font-size: 1.4rem;
+    position: absolute;
+    color: #fff;
+    font-family: Monda;
+    font-weight: 500;
+    text-align: center;
+    font-size: 1.4rem;
+  }
+  .all-buttons {
+    display: grid;
+    grid-template-columns: auto auto;
+    position: absolute;
+    left: calc(100% / 2 - 185px);
+    bottom: -60vh;
+    width: 100vw;
+    grid-template-rows: max-content;
+  }
+  .cybr-btn {
+    margin: 20px;
+  }
+  .card-container {
+    position: absolute;
+    width: 65vmin;
+    height: 80vmin;
+    left: calc(100% / 2 - 120px);
+    right: 20px;
+    margin-top: 100px;
+    z-index: 1;
+  }
+  .main h1,
+  .main3 h1 {
+    left: calc(100% / 2 - 170px);
+    font-size: 1.8rem;
+  }
+
+  .main p,
+  .main3 p {
+    margin: 140px 20px;
+    width: 90vw;
+    text-align: justify;
   }
 }
