--- a/styles.css
+++ b/styles.css
@@ -650,5 +650,9 @@ div {
     margin: 140px 20px;
     width: 90vw;
     text-align: justify;
+    z-index: 3;
+  }
+  .m123 {
+    display: none;
   }
 }
